<resources>
  <string name="app_name">Tic Tac Toe</string>
  <string name="placeholder">Placeholder</string>

  <string name="login_fragment_label">Login</string>
  <string name="game_fragment_label">Tic Tac Toe: Game</string>
  <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>

  <string name="login">Register or Log In</string>
  <string name="logout">Log Out</string>

  <string name="new_game">New Game</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="wins">Wins</string>
  <string name="losses">Losses</string>

  <string name="blank"> </string>

  <string name="new_game_dialog_message">Which type of game do you want to create?</string>
  <string name="forfeit_game_dialog_message">Are you sure you want to forfeit this game?</string>

  <string name="two_player">Two-Player</string>
  <string name="one_player">One-Player</string>

  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="confirm">Confirm</string>
  <string name="game_info">Open Games</string>
  <string name="your_turn">Your Turn</string>
  <string name="other_turn">Opponent\'s turn</string>
  <string name="_0">0</string>
  <string name="player_two">Waiting…</string>
  <string name="player_one">Waiting…</string>
  <string name="waiting">Waiting</string>
  <string name="opponent">Opponent</string>
  <string name="you">You</string>
    <string name="channel_name">channel_name</string>
  <string name="channel_description">Description</string>
    <string name="deregister">Deregister</string>
</resources>