<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

  <Button
      android:id="@+id/button0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="@id/button3"
      app:layout_constraintStart_toStartOf="@+id/button3" />

  <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toTopOf="@+id/button4"
      app:layout_constraintEnd_toEndOf="@id/button4"
      app:layout_constraintStart_toStartOf="@+id/button4" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toTopOf="@+id/button5"
      app:layout_constraintEnd_toEndOf="@id/button5"
      app:layout_constraintStart_toStartOf="@+id/button5" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toBottomOf="@id/button4"
      app:layout_constraintEnd_toStartOf="@+id/button4"
      app:layout_constraintTop_toTopOf="@+id/button4" />

  <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintBottom_toBottomOf="@id/button4"
      app:layout_constraintStart_toEndOf="@+id/button4"
      app:layout_constraintTop_toTopOf="@+id/button4" />

  <Button
      android:id="@+id/button6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintEnd_toEndOf="@id/button3"
      app:layout_constraintStart_toStartOf="@+id/button3"
      app:layout_constraintTop_toBottomOf="@id/button3" />

  <Button
      android:id="@+id/button7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintEnd_toEndOf="@id/button4"
      app:layout_constraintStart_toStartOf="@+id/button4"
      app:layout_constraintTop_toBottomOf="@id/button4" />

  <Button
      android:id="@+id/button8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/btn_margin"
      android:text="@string/blank"
      app:layout_constraintEnd_toEndOf="@id/button5"
      app:layout_constraintStart_toStartOf="@+id/button5"
      app:layout_constraintTop_toBottomOf="@id/button5" />

  <TextView
      android:id="@+id/player_one"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/player_one"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.294"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.226" />

  <TextView
      android:id="@+id/player_two"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/player_two"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.662"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.226" />

  <TextView
      android:id="@+id/display"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/your_turn"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.144" />
</androidx.constraintlayout.widget.ConstraintLayout>